# AI-Ready-Data

./: .gitignore  .markdownlint-cli2.jsonc  .pymarkdown.json  CONTRIBUTING.md  LICENSE-CODE  LICENSE-CONTENT  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: link-check.yml  pages.yml
docs/: index.md
docs/.vitepress/: config.mts  env.d.ts  navigation.mjs
docs/00-start/: what-is-ai-ready-data.md
docs/01-assess/: 90-day-roadmap.md  business-impact.md  readiness.md
docs/02-govern/: governance.md  security.md
docs/03-capture/: better-records.md
docs/04-sources/: edm-ssot.md  email.md  office-spreadsheets.md
docs/05-pipeline/: ingestion.md  rag-operations.md
docs/06-cases/: hanbit-manufacturing.md  index.md  nia-public-ai.md  rexera.md  siemens.md
docs/ai-use/: index.md
docs/assets/: extra.css  extra.js
docs/data-ready/: index.md
docs/knowledge-ready/: index.md  knowledge-units.md
docs/overrides/: main.html
docs/practice/: index.md
docs/reference/: architectures.md  contributing.md  glossary.md  rag-evaluation.md  security-privacy.md  sources.md  standards-governance.md  unstructured-records.md  value-evidence.md
docs/seminar/: index.md
docs/templates/: access-matrix.md  decision-log.md  document-standard.md  glossary-template.md  index.md  meeting-minutes.md  quality-scorecard.md  rag-golden-set.md  readiness-assessment.md  roadmap-raci.md  source-inventory.md  ssot-register.md  use-case-canvas.md
scripts/: validate-docs.mjs  validate_docs.py
(+35 files in other folders)
