[project]
name = "ai-ready-data-docs"
version = "0.1.0"
description = "Documentation toolchain for the AI-Ready Data Korean practical wiki"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.7",
    "pymarkdownlnt==0.9.39",
    "pyyaml==6.0.3",
]

[tool.uv]
package = false
